# car_rental_dynamic_book_prediction

./: .gitignore  README.md  makefile  pyproject.toml
data/: README.md
data/processed/: synthetic_bookings.csv  synthetic_car_classes.csv  synthetic_locations.csv  synthetic_rental_prices.csv  synthetic_suppliers.csv  synthetic_users.csv
models/: feature_scaler.pkl  logistic_regression_baseline.pth  lstm_model.pth  lstm_sequence_scaler.pkl  lstm_static_scaler.pkl  prophet_logistic_regression.pkl  prophet_metadata.pkl  prophet_random_forest.pkl  prophet_scaler.pkl  xgboost_metadata.pkl  xgboost_model.json
notebooks/: 01_sample_dataset_generator.ipynb  02_synthetic_dataset_generator.ipynb  03_synthetic_data_analysis.ipynb  04_improved_synthetic_data_generator.ipynb  05_book_or_wait_baseline_model.ipynb  06_book_or_wait_xgboost_model.ipynb  07_book_or_wait_lstm_model.ipynb  08_book_or_wait_prophet_model.ipynb  09_book_or_wait_kumo_rfm_model.ipynb  dataset_generator.ipynb
notebooks/data/: car_rental_search_behavior_research.md  synthetic_data_quality_report.json  test_bookings.csv  test_searches.csv
notebooks/data/improved_synthetic_data/: generation_metadata.json  synthetic_bookings.csv  synthetic_locations.csv  synthetic_rental_prices.csv
notebooks/data/sample/: bookings.csv  car_classes.csv  competitor_prices.csv  locations_weights.json  rental_prices.csv  (+2 more)
notebooks/scripts/: test_booking_generator.py  test_timestamp_generation.py
src/car_rental_prediction/: BOOK_OR_WAIT_MODEL_STRATEGY.md  DATA_GENERATION_STRATEGY.md  KUMO_RFM_EVALUATION.md  __init__.py
(+17 files in other folders)
